project/syntax_tests/tests_input/unit/good/Good64.ty
singleton class FunctionsAndActions { 
    
    functions: {
        someFunction: (f: get (x: Int) -> Int, g: get (x: Int) -> Bool) -> do (x: Int) -> Int = {
            if (local.g(5)) then {
                do (x: Int) -> 3;
            } else {
                do (x: Int) -> 5 * x;
            }
        }
    }
    
    actions: {
        someAction: (f: do (x: Int, y: Int) -> Void, g: get (x: Int) -> Bool) ->  do (x: Int) -> Int = {
            if (local.g(5)) {
                System#printLine("this case")
                System#something
                do (x: Int) -> 5 * x;
            } else {
                do (x: Int) -> 7 * x;
            }
        }
    }
}
