project/syntax_tests/tests_input/unit/bad/Bad62.ty
singleton class Wrapper { 
    
    functions: {
        getOrDefault: (x: Int) -> Int = {
            if (x > 3) then x else 3;
        }
    }
}
